[package]
name = "prime-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
http-utils = {path = "../http-utils"}
serde = { version = "1.0.144", features = ["derive"] }
